--- a/public/index.css
+++ b/public/index.css
@@ -1,11 +1,21 @@
+body{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 /* ****************************************************************** */
 /* header */
 /* ****************************************************************** */
-header {
+.header {
     display: flex;
     justify-content: space-between;
     padding: 0px 8%;
     align-items: center;
+    position: fixed;
+    width: 83%;
+    background-color: rgb(255, 255, 255);
+    left: end;
+    z-index: 999;
 }
 
 .Menu {
